--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Criminal Record Archives</title>
         <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
         <link rel="stylesheet" type='text/css' href="/stylesheets/app.css"
